--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="C:/Users/perorin/Desktop/Desktop/pleiades/lib/jsyntaxpane-1.0.0.jar"/>
+	<classpathentry kind="src" path="/SwingParts"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
