--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="C:/Users/perorin/Desktop/Desktop/pleiades/lib/jsyntaxpane-1.0.0.jar"/>
 	<classpathentry kind="src" path="/SwingParts"/>
+	<classpathentry kind="lib" path="C:/Users/perorin/Desktop/Desktop/pleiades/lib/jackson/jackson-annotations-2.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/perorin/Desktop/Desktop/pleiades/lib/jackson/jackson-core-2.8.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/perorin/Desktop/Desktop/pleiades/lib/jackson/jackson-databind-2.8.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
